<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="40dp">

    <Button
        android:id="@+id/btn_jd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_jd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_taobao"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btn_taobao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_taobao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_jd"
        app:layout_constraintBottom_toTopOf="@id/btn_tmall" />

    <Button
        android:id="@+id/btn_tmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_tmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_taobao"
        app:layout_constraintBottom_toTopOf="@id/btn_amazon" />

    <Button
        android:id="@+id/btn_amazon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_amazon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_tmall"
        app:layout_constraintBottom_toTopOf="@id/btn_pdd" />

    <Button
        android:id="@+id/btn_pdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_pdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_amazon"
        app:layout_constraintBottom_toTopOf="@id/btn_cycle" />

    <Button
        android:id="@+id/btn_cycle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_by_priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_pdd"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>